# RayTracer-3

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp
src/lib/: CMakeLists.txt
src/lib/camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  Frame.cpp  Frame.hpp
src/lib/compute/: CMakeLists.txt  CommandPool.cpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  ErrorCodes.hpp  Formats.hpp  GPU.cpp  GPU.hpp  Instance.cpp  Instance.hpp  MemoryPool.cpp  MemoryPool.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp  Suite.hpp  Swapchain.cpp  Swapchain.hpp
src/lib/debugger/: CMakeLists.txt  CppDebugger.cpp  CppDebugger.hpp
src/lib/entities/: CMakeLists.txt  Object.cpp  Object.hpp  RenderEntity.cpp  RenderEntity.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/lib/frame/: CMakeLists.txt  Frame.cpp  Frame.hpp
src/lib/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  SequentialRenderer.cpp  SequentialRenderer.hpp  Vertex.hpp  VulkanOnlineRenderer (conflicted).cpp  VulkanOnlineRenderer [conflicted 2].cpp  VulkanOnlineRenderer [conflicted].cpp  VulkanOnlineRenderer.cpp  VulkanOnlineRenderer.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/lib/sceneparser/: CMakeLists.txt  SceneLang.md  SceneParser.cpp  SceneParser.hpp
src/lib/sceneparser/tests/: test.scene
src/lib/shaders/: pre_render_sphere_v1.glsl  pre_render_sphere_v2_faces.glsl  pre_render_sphere_v2_vertices.glsl  random_v1.glsl  raytracer_v1.glsl  raytracer_v2.glsl  raytracer_v3.glsl  raytracer_v3_online.glsl
src/lib/shaders/raytracer/: raytracer_v4.glsl  reduce_v1.glsl
src/lib/tools/: Array.cpp  Array.hpp  CMakeLists.txt  Common.cpp  Common.hpp
src/lib/world/: CMakeLists.txt  Sphere.cpp  Sphere.hpp  World.hpp
src/lib/world_old/: CMakeLists.txt  RenderObject.cpp  RenderObject.hpp  World.cpp
src/shaders/: simple_blue_background.glsl  test_shader.glsl
